manifests/backstage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: backstage
        image: 107363237542.dkr.ecr.us-east-1.amazonaws.com/backstage@sha256:c493c38936c4ea86a94d76623a28526795afd603ee40ae5034f0b6864a5a7cf2
        command:
        - node
        - packages/backend
        args:
        - --config
        - app-config.yaml
        - --config
        - app-config.production.yaml
        - --config
        - /etc/backstage/app-config.platform.yaml
        ports:
        - name: http
          containerPort: 7007
        volumeMounts:
        - name: config
          mountPath: /etc/backstage
          readOnly: true
        readinessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 15
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 60
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: '2'
            memory: 2Gi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
      volumes:
      - name: config
        configMap:
          name: backstage-platform-config
